--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
+<hr>
 
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
