mejoras interfaz home.component.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="col-lg-8 col-lg-offset-2">
   <div class="jumbotron">
-      <h2 class="text-danger"> {{title}} </h2>
+      <h1> {{title}} </h1>
       <p>...</p>
       <p>
         <a class="btn btn-danger btn-lg" [routerLink]="['/home']" role="button">Inicio</a>
