--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,23 +1,31 @@
 .navbar.navbar-inverse {
-  background-color: darkred;
+  background-color: #1B61B8;
   border-radius: 0 !important;
   margin: 0;
   border: none;
-  box-shadow: 0px 4px 5px lightgray;
+  height: 200px;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 65%, 0% 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 65%, 0% 100%);
+}
+
+.img-brand {
+  height: 150px;
+  width: 150px;
+  image-rendering: crisp-edges;
 }
 .navbar.navbar-inverse li, 
 .navbar.navbar-inverse li a, 
 .navbar.navbar-inverse li span {
   color: white;
+  font-weight: bold;
+  font-size: 1.1em;
+  transition: .5s all;
 }
 .navbar.navbar-inverse li:hover a, 
 .navbar.navbar-inverse li:hover span {
-  color: #ddd;
-}
-.navbar.navbar-inverse li:hover {
-  background-color: rgba(255, 255, 255, .2);
+  font-size: 1.2em;
 }
 
 .navbar-nav .active {
-  border-bottom: 4px solid peru;
+  border-bottom: 4px solid lightblue;
 }
