--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,20 +8,20 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Angular 4</a>
+      <img src="assets/angular.png" alt="" class="img-brand navbar-brand">
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav pull-right">
         <li>
-          <a [routerLink]="['/home']" [routerLinkActive] = "['active']"><span class="glyphicon glyphicon-home"></span> Inicio</a>
+          <a [routerLink]="['/home']" [routerLinkActive] = "['active']">Inicio</a>
         </li>
         <li>
-          <a [routerLink]="['/about']" [routerLinkActive] = "['active']"><span class="glyphicon glyphicon-globe"></span> About</a>
+          <a [routerLink]="['/about']" [routerLinkActive] = "['active']">About</a>
         </li>
         <li>
-          <a [routerLink]="['/contact']" [routerLinkActive] = "['active']"><span class="glyphicon glyphicon-comment"></span> Contacto </a>
+          <a [routerLink]="['/contact']" [routerLinkActive] = "['active']">Contacto </a>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
