--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,3 +1,7 @@
 .jumbotron {
-  box-shadow: 3px 4px 8px lightgray;
+  box-shadow: 4px 5px 8px #666;
+  background-color: lightslategrey;
+}
+.jumbotron * {
+  color: white;
 }
