--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,6 +23,12 @@
         <li>
           <a [routerLink]="['/contact']" [routerLinkActive] = "['active']">Contacto </a>
         </li>
+        <li>
+          <a [routerLink]="['/register']" [routerLinkActive] = "['active']">Registro</a>
+        </li>
+        <li>
+          <a [routerLink]="['/login']" [routerLinkActive] = "['active']">Entrar </a>
+        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
