--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,7 +1,7 @@
 .jumbotron {
-  box-shadow: 4px 5px 8px #666;
-  background-color: lightslategrey;
+  box-shadow: 4px 5px 8px rgb(102, 102, 102);
+  background-color: rgb(255, 255, 255);
 }
 .jumbotron * {
-  color: white;
+
 }
