--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
-<div class="col-lg-8 col-lg-offset-2">
+<div class="col-lg-8 col-lg-offset-2" [@fadeLateral]>
   <div class="jumbotron">
-      <h1> {{title}} </h1>
+      <h2> {{title}} </h2>
       <p>...</p>
       <p>
-        <a class="btn btn-danger btn-lg" [routerLink]="['/home']" role="button">Inicio</a>
+        <a class="btn btn-primary btn-lg" [routerLink]="['/home']" role="button">Inicio</a>
         <a class="btn btn-success btn-lg" [routerLink]="['/about']" role="button">About</a>
         <a class="btn btn-warning btn-lg" [routerLink]="['/contact']" role="button">Contacto</a>
       </p>
